<resources>
    <string name="app_name">Quiz Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Categories">Categories</string>
    <string name="about">About</string>
    <string name="emailus">storeskapps@gmail.com</string>
    <string name="noQuiz">Not enough Quiz found for this category</string>
    <string name="problemSpla">Something went wrong\nPlease check your internet connection or exit and enter again</string>
    <string name="title_activity_testing">Testing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_used">All hint are already used</string>
    <string name="you_win">You Win</string>
    <string name="you_lose">You Lose</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="please_send_email_at">"Please send email at: "</string>
    <string name="contact_us">Contact Us</string>
    <string name="offline_txt">Look like you\'re offline or something went wrong</string>
    <string name="go_to_back">Go to back</string>
    <string name="no_data_found">No data found</string>
    <string name="pick_category">Pick Category</string>
    <string name="up_to_100_categories">Up to 100 Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="category">Category</string>
    <string name="view_all_categories">View All Categories</string>
    <string name="quiz_history">Quiz History</string>
    <string name="you_have_participated_in_X_quiz">You have participated in</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="pause_quiz_content_description">This is image button to pause the quiz</string>
    <string name="hint_button">Hint button</string>
    <string name="what_is_question">What is question?</string>
    <string name="better_luck_next_time">Better Luck Next Time</string>
    <string name="need_at_least_60_to_win">Need at least 60% to win</string>
    <string name="demo_score">1/11</string>
    <string name="play_again">Play Again</string>
    <string name="go_to_home">Go T0 Home</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="this_is_for_image_view">This is for image view</string>
    <string name="skipped">Skipped</string>
    <string name="level">Level</string>
    <string name="this_is_question_image">This is question image</string>
    <string name="option_text">A) Beginner</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="about_quiz_master_app">About Quiz Master App</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="hint_will_be_appear_here">Hint will be appear here</string>
    <string name="no_number">0</string>
    <string name="please_wait">Please wait</string>
    <string name="timer_icon">Timer icon</string>
    <string name="advance">Advance</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner">Beginner</string>


</resources>