<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HelpActivity">


    <LinearLayout
        android:background="@color/purple_700"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_to_back"
            android:src="@drawable/back_white" />

        <TextView
            android:textAllCaps="false"
            android:id="@+id/titleScreen"
            android:textSize="22sp"
            android:layout_marginStart="40dp"
            android:textStyle="bold"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:visibility="visible"
        android:id="@+id/offlineID"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/offline_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/signal_wifi_statusbar_connected_no_internet"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/emailID"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/browserID"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <WebView
            android:id="@+id/webviewHelpID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>