<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".fragment.QuizHistoryFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeCategoryFrag"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:paddingTop="20dp"
                android:layout_marginBottom="50dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="start"
                    android:text="@string/quiz_history"
                    android:layout_marginHorizontal="0dp"
                    android:textColor="@color/purple_700"
                    android:textStyle="bold"
                    android:textSize="@dimen/commonTitle"
                    android:textAlignment="textStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="0dp"
                    android:id="@+id/txtTotalQuizParticipate"
                    android:textColor="@color/purple_700"
                    android:textStyle="normal"
                    android:textSize="@dimen/subCommonTitle"
                    android:text="@string/you_have_participated_in_X_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <RelativeLayout
                    android:layout_marginBottom="0dp"
                    android:paddingBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginBottom="@dimen/commonMarginBottom"
                        android:id="@+id/recyclerQuizHistoryFrag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:visibility="gone"
                        android:layout_centerInParent="true"
                        android:text="@string/no_data_found"
                        android:id="@+id/no_data_quiz_history_fragment"
                        android:minHeight="@dimen/noCategoryFoundTxtMinHeight"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>